--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./node_modules/semantic-ui-css/semantic.min.css">
     <title>I see you</title>
 </head>
 <body>
